--- a/frontend/public/listen.html
+++ b/frontend/public/listen.html
@@ -121,5 +121,6 @@
       <a class="cta-link" href="index.html">Go record something</a>
     </div>
   </div>
+  <script type="module" src="./listen.js"></script>
 </body>
 </html>
